# ttrpg-converter

./: .gitattributes  .gitignore  .rustfmt.toml  COMPREHENSIVE_GITHUB_SETUP.ps1  COMPREHENSIVE_PLANNING_INDEX.md  COMPREHENSIVE_TYPE_MAPPINGS.md  CONSOLIDATED_O2O_MAPPING_CHECKLIST.md  Cargo.toml  DETAILED_TASK_BREAKDOWN.md  FOUNDRY_COMMON_O2O_MAPPING_GUIDE.md  M2_CORE_ENGINE_TASKS.md  M3_CLI_INTERFACE_TASKS.md  M4_GUI_INTERFACE_TASKS.md  M5_PRODUCTION_READY_TASKS.md  MODULAR_MAPPING_DESIGN.md  O2O_MAPPING_IMPLEMENTATION_CHECKLIST.md  PATHBUILDER_PF2E_MAPPING_CHECKLIST.md  R20Converter-0.14.0rc2-linux.code-workspace  README.md  ROLL20_O2O_MAPPING_GUIDE.md  TTRPGConverter.sln  clippy.toml  install_dev_tools.ps1  justfile  package.json  setup-m1-foundation.ps1  setup_github_planning.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/apps/ttrpg-gui/: Cargo.toml
crates/apps/ttrpg-gui/src/: lib.rs
crates/core/ttrpg-build-utils/: Cargo.toml
crates/core/ttrpg-build-utils/src/: lib.rs
crates/core/ttrpg-core/: Cargo.toml
crates/core/ttrpg-core/src/: error.rs  lib.rs  types.rs
crates/core/ttrpg-core/src/utils/: mod.rs  sanitization.rs  validation.rs
crates/core/ttrpg-manager/: Cargo.toml
crates/core/ttrpg-manager/src/: discovery.rs  injection.rs  lib.rs  lifecycle.rs  manager.rs  registry.rs
crates/core/ttrpg-traits/: Cargo.toml
crates/core/ttrpg-traits/src/: asset.rs  export.rs  input.rs  lib.rs  output.rs  processing.rs  validation.rs
crates/core/ttrpg-types/: Cargo.toml
crates/core/ttrpg-types/src/: audio.rs  campaign.rs  character.rs  common.rs  damage.rs  enums.rs  item.rs  lib.rs  scene.rs  spell.rs  validation.rs  visual.rs
crates/orchestration/ttrpg-orchestration/: Cargo.toml
crates/orchestration/ttrpg-orchestration/src/: discovery.rs  lib.rs  pipeline.rs
crates/plugins/ttrpg-input-plugins/: Cargo.toml
crates/plugins/ttrpg-input-plugins/src/: fantasy_grounds.rs  foundry.rs  lib.rs
crates/plugins/ttrpg-input-plugins/src/roll20/: handler.rs  mod.rs  parsing.rs
crates/plugins/ttrpg-processing-plugins/: Cargo.toml  validation-config.toml
crates/plugins/ttrpg-processing-plugins/src/: lib.rs  orchestration.rs
crates/plugins/ttrpg-processing-plugins/src/asset/: conversion.rs  core.rs  mod.rs  reference.rs  resolution.rs  retrieval.rs  scene.rs
crates/plugins/ttrpg-processing-plugins/src/asset/roll20/: integration.rs  mod.rs  processing.rs
crates/plugins/ttrpg-processing-plugins/src/asset/roll20/processing/: tests.rs
crates/plugins/ttrpg-processing-plugins/src/shared/: mod.rs
crates/plugins/ttrpg-processing-plugins/src/validation/: core.rs  mod.rs  plugin.rs  validators.rs
crates/plugins/ttrpg-processing-plugins/src/validation/roll20/: integration.rs  mod.rs
crates/plugins/ttrpg-processing-plugins/src/validation/roll20/validation/: tests.rs
crates/ttrpg-assets/: Cargo.toml
crates/ttrpg-assets/src/: http_client.rs  lib.rs  memory_cache.rs  roll20_processor.rs  service.rs
crates/ttrpg-assets/src/roll20_processor/: tests.rs
crates/ttrpg-cli/: Cargo.toml
crates/ttrpg-cli/src/: lib.rs  main.rs
crates/ttrpg-cli/src/commands/: mod.rs  test_roll20.rs
crates/ttrpg-core/: Cargo.toml
crates/ttrpg-core/src/: config.rs  error.rs  lib.rs  logging.rs  manager.rs  services.rs  types.rs  validation.rs  validation_old.rs
crates/ttrpg-core/src/orchestration/: plugin_discovery.rs
crates/ttrpg-core/src/plugin_framework/: discovery.rs  injection.rs  interfaces.rs  manager.rs  mod.rs  pipeline.rs  registry.rs  types.rs
crates/ttrpg-core/src/plugins/: interfaces.rs  manager.rs  mod.rs  registry.rs  types.rs
crates/ttrpg-core/src/validation/: roll20_validation.rs
crates/ttrpg-core/src/validation/roll20_validation/: tests.rs
crates/ttrpg-core/tests/: service_integration.rs
crates/ttrpg-formats/: Cargo.toml
crates/ttrpg-formats/src/: export_service.rs  lib.rs  roll20.rs  roll20_asset_integration.rs  roll20_validation_integration.rs
crates/ttrpg-gui/: Cargo.toml
crates/ttrpg-input-plugins/: Cargo.toml
crates/ttrpg-output-plugins/: Cargo.toml
crates/ttrpg-output-plugins/src/: lib.rs
crates/ttrpg-output-plugins/src/json/: core.rs  mod.rs
crates/ttrpg-output-plugins/src/logging/: console.rs  mod.rs
crates/ttrpg-processing-plugins/: Cargo.toml
crates/ttrpg-processing-plugins/src/: lib.rs
crates/ttrpg-processing-plugins/src/asset/: core.rs  mod.rs
crates/ttrpg-processing-plugins/src/asset/roll20/: integration.rs  mod.rs  processing.rs
crates/ttrpg-processing-plugins/src/asset/roll20/processing/: tests.rs
crates/ttrpg-processing-plugins/src/validation/: core.rs  mod.rs
crates/ttrpg-processing-plugins/src/validation/roll20/: integration.rs  mod.rs  validation.rs
crates/ttrpg-processing-plugins/src/validation/roll20/validation/: tests.rs
docs/architecture/: comprehensive_plugin_architecture.md  plugin_system_design.md
examples/: test_real_roll20.rs
obsidian-project/: 📋 TTRPGConverter Pure Rust Kanban Board.md
obsidian-project/.obsidian/: app.json  plugins.json  workspace.json
obsidian-project/Architecture/: ARCHITECTURAL_DECISIONS.md  Compendium Caching Strategy.md  INTERNAL_TYPE_HIERARCHY.md  JUNIOR_DEV_GUIDE_TWO_STAGE_ARCHITECTURE.md  M1.5_DATABASE_DRIVEN_ARCHITECTURE.md  M2.1_AUTOMAPPER_INTEGRATION_STRATEGY.md  M2.3_PROJECT_ARCHITECTURE.md  M3.2_MAPPING_ARCHITECTURE_AND_CONVENTIONS.md  validation-system.md
obsidian-project/Detailed Plans/: M1.5_DATABASE_DRIVEN_ARCHITECTURE.md  M2_ROLL20_5E_TO_FOUNDRY_PF2E.md  M3_FOUNDRY_PF1E_TO_PF2E.md  M4_ENHANCEMENT_PIPELINE.md  M7_PATHBUILDER_INTEGRATION.md
obsidian-project/Templates/: Milestone Template.md
obsidian-project/📊 Dashboards/: COMPREHENSIVE_PLANNING_INDEX.md  Development Dashboard.md
obsidian-project/📋 Detailed Plans/: CSHARP_MIGRATION_RATIONALE.md  M1.5_DATABASE_DRIVEN_ARCHITECTURE.md  M1.6_ASSET_MANAGEMENT_ARCHITECTURE.md  M1.7_ADVANCED_ASSET_PIPELINE.md  M1.8_FINAL_ASSET_PIPELINE.md  M10_ADVANCED_OUTPUT_FORMATS.md  M2_CORE_ENGINE_TASKS.md  (+22 more)
reference/: GITHUB_SETUP_GUIDE.md  PROJECT_STATUS.md  TTRPG_CONVERTER_STRATEGIC_PLAN.md
(+292 files in other folders)
