[workspace]
members = [
    "crates/ttrpg-core",
    "crates/ttrpg-formats", 
    "crates/ttrpg-assets",
    "crates/ttrpg-gui",
    "crates/ttrpg-cli"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# GUI dependencies
egui = "0.28"
eframe = "0.28"

# Performance
rayon = "1.8"

# Asset processing  
image = "0.25"
zip = "2.1"
