[package]
name = "ttrpg-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emckee2006/ttrpg-converter"

[dependencies]
ttrpg-core = { path = "../ttrpg-core" }
ttrpg-formats = { path = "../ttrpg-formats" }
ttrpg-assets = { path = "../ttrpg-assets" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
zip = "0.6"
tracing-subscriber = { version = "0.3", workspace = true }
