[package]
name = "ttrpg-core"
version = "0.1.0"
edition = "2021"
description = "Core domain logic and data structures"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emckee2006/ttrpg-converter"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
zip = "0.6"
image = "0.25"
