[package]
name = "ttrpg-core"
version = "0.1.0"
edition = "2021"
description = "Core domain logic and data structures"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emckee2006/ttrpg-converter"

[dependencies]
# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = { version = "2.0", features = ["serde"] }

# Professional validation framework (replacing 1,406 lines of custom validation)
validator = { version = "0.18", features = ["derive"] }

# Professional configuration management with hierarchical TOML + env support
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"         # TOML parsing and serialization
dirs = "5.0"         # Cross-platform user directory detection

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }

# Logging infrastructure
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
zip = "0.6"
image = "0.25"

[dev-dependencies]
# Testing framework dependencies
proptest = "1.4"                                    # Property-based testing
criterion = { version = "0.5", features = ["html_reports"] }  # Benchmarking
tokio-test = "0.4"                                   # Async testing utilities
temp-env = "0.3"                                     # Environment variable testing
tempfile = "3.8"                                     # Temporary file testing
assert_fs = "1.0"                                    # File system testing utilities
predicates = "3.0"                                   # Additional assertion predicates
