[package]
name = "ttrpg-core"
version = "0.1.0"
edition = "2021"
description = "Core domain logic and data structures"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emckee2006/ttrpg-converter"

[dependencies]
# Core functionality - WORKSPACE UPGRADED
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

# Professional validation framework (replacing 1,406 lines of custom validation) - WORKSPACE UPGRADED
validator = { workspace = true }
regex = { workspace = true }       # Regular expressions for Roll20 asset URL validation

# Plugin Orchestration Libraries (M2.0 Foundation)
daggy = { workspace = true }        # Graph-based plugin orchestration and dependency resolution
shaku = { workspace = true }        # Dependency injection container for plugin lifecycle management  
inventory = { workspace = true }   # Plugin auto-discovery and registration at compile time
petgraph = { workspace = true }    # Advanced graph algorithms for plugin pipeline analysis
num_cpus = { workspace = true }    # CPU count detection for parallel processing

# Professional configuration management with hierarchical TOML + env support - WORKSPACE UPGRADED
figment = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }         # Cross-platform user directory detection

# Async runtime and utilities - WORKSPACE UPGRADED
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

# Logging infrastructure - WORKSPACE UPGRADED
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
zip = { workspace = true }
image = { workspace = true }

[dev-dependencies]
# Testing framework dependencies - WORKSPACE UPGRADED
proptest = { workspace = true }                      # Property-based testing
criterion = { workspace = true }                     # Benchmarking
tokio-test = { workspace = true }                    # Async testing utilities
temp-env = { workspace = true }                      # Environment variable testing
tempfile = { workspace = true }                      # Temporary file testing
assert_fs = { workspace = true }                     # File system testing utilities
predicates = { workspace = true }                    # Additional assertion predicates
