[package]
name = "ttrpg-formats"
version = "0.1.0"
edition = "2021"
description = "File format parsers and converters"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emckee2006/ttrpg-converter"

[dependencies]
ttrpg-core = { path = "../ttrpg-core" }
ttrpg-assets = { path = "../ttrpg-assets" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"  # Enable async methods in trait objects
