[package]
name = "ttrpg-output-plugins"
version = "0.1.0"
edition = "2021"
description = "Output plugins for various target formats (Foundry VTT, PDF, JSON)"
authors = ["TTRPG Converter Team"]

[dependencies]
# Core plugin interfaces and types
ttrpg-core = { path = "../ttrpg-core" }

# Async trait support for plugin interfaces
async-trait = { workspace = true }

# JSON processing for output generation
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File I/O and path handling
tokio = { workspace = true }

# Orchestration framework libraries (M2.0B Foundation)
daggy = { workspace = true }
shaku = { workspace = true }
inventory = { workspace = true }

# Testing framework
[dev-dependencies]
tokio-test = { workspace = true }

[lib]
name = "ttrpg_output_plugins"
path = "src/lib.rs"
