[package]
name = "ttrpg-processing-plugins"
version = "0.1.0"
edition = "2021"
description = "Processing plugins for asset management and validation"
authors = ["TTRPG Converter Team"]

[dependencies]
# Core plugin interfaces and types
ttrpg-core = { path = "../ttrpg-core" }

# Async trait support for plugin interfaces
async-trait = { workspace = true }

# JSON processing - WORKSPACE UPGRADED
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for asset downloading with middleware support - WORKSPACE UPGRADED
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
http-cache-reqwest = { workspace = true }

# URL parsing
url = { workspace = true }

# Memory caching
moka = { workspace = true }

# Regular expressions
regex = { workspace = true }

# Cryptographic hashing for asset security
sha2 = { workspace = true }

# Error handling and logging - WORKSPACE UPGRADED
thiserror = { workspace = true }
tracing = { workspace = true }

# File I/O and path handling
tokio = { workspace = true }

# Validation framework
validator = { workspace = true }

# Testing framework
[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "ttrpg_processing_plugins"
path = "src/lib.rs"
