[package]
name = "ttrpg-build-utils"
version = "0.1.0"
edition = "2021"
description = "Shared build utilities for TTRPG platform crates - typify, schema processing, etc."

[dependencies]
serde_json = { workspace = true }
typify = { workspace = true }
schemars = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
glob = "0.3"
regex = "1.10"
