[package]
name = "ttrpg-core"
version = "0.1.0"
edition = "2021"
description = "Core domain logic and data structures"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/emckee2006/ttrpg-converter"

[dependencies]
# Core utilities
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
validator = { workspace = true }
zip = { workspace = true }
image = { workspace = true }
lazy_static = "1.5"

# Configuration and async
figment = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Testing framework dependencies - WORKSPACE UPGRADED
proptest = { workspace = true }                      # Property-based testing
criterion = { workspace = true }                     # Benchmarking
tokio-test = { workspace = true }                    # Async testing utilities
temp-env = { workspace = true }                      # Environment variable testing
tempfile = { workspace = true }                      # Temporary file testing
assert_fs = { workspace = true }                     # File system testing utilities
predicates = { workspace = true }                    # Additional assertion predicates

# Build dependencies removed - schema generation moved to ttrpg-schema-types crate
