[package]
name = "ttrpg-manager"
version = "0.1.0"
edition = "2021"
description = "Plugin discovery and management for TTRPG Converter"

[dependencies]
ttrpg-traits = { path = "../ttrpg-traits" }
ttrpg-core = { path = "../ttrpg-core" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
# Plugin management and DI
inventory = { workspace = true }
shaku = { workspace = true }
once_cell = "1.19"
dashmap = { workspace = true }
libloading = "0.8"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"