[package]
name = "ttrpg-types"
version = "0.1.0"
edition = "2021"
description = "Internal TTRPG domain types and data models"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
rand = { workspace = true }
serde_test = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }