[package]
name = "ttrpg-input-plugins"
version = "0.1.0"
edition = "2021"
description = "Input plugins for various TTRPG formats (Roll20, Foundry VTT, Fantasy Grounds)"
authors = ["TTRPG Converter Team"]

[dependencies]
# Core plugin interfaces and types
ttrpg-core = { path = "../../core/ttrpg-core" }
ttrpg-traits = { path = "../../core/ttrpg-traits" }
ttrpg-types = { path = "../../core/ttrpg-types" }

# Date/time handling
chrono = { workspace = true }

# Async trait support for plugin interfaces
async-trait = { workspace = true }

# JSON processing for campaign data
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
tracing = { workspace = true }

# File I/O and path handling
tokio = { workspace = true }

# Testing framework
[dev-dependencies]
tokio-test = { workspace = true }

[lib]
name = "ttrpg_input_plugins"
path = "src/lib.rs"
